# JABS-postprocess

./: .dockerignore  .gitignore  Dockerfile  README.md  annotations_to_video_snippets.py  bout_length_analysis.py  bouts_to_bins.py  compare_classifiers.py  compare_gt.py  create_video_snippets.py  ethogram.py  filter_behavior_tables.py  find_class_segmentations.py  generate_behavior_tables.py  gt_ethograms.py  heuristic_classify.py  phase_compare_behaviors.py  phase_compare_rooms.py  phase_single_behavior.py  pyproject.toml  sample_uncertain_vids.py  test_plot.py
.github/workflows/: _build-docker-action.yml  pull-request.yml  release.yml
analysis_utils/: circadian.py  clip_utils.py  gt_utils.py  parse_table.py  plots.py  qc_plots.py
examples/: sample_uncertain_vids.py  test_id_matching.py  test_plot.py
examples/configs/: README.md  basic_locomotion.yaml  complex_behavior.yaml  template_config.yaml
heuristic_classifiers/: corner.yaml  corner_facing.yaml  locomotion.yaml  periphery.yaml  wall_facing.yaml
jabs_utils/: bin_utils.py  bout_utils.py  features.py  heuristics.py  identity.py  metadata.py  project_utils.py  read_utils.py  write_utils.py
plots/: README.md  find_overlap.py  generate-strain-plots.py  plot_overlap.py
src/jabs_postprocess/: bouts_to_bins.py  compare_gt.py  create_video_snippets.py  (+2 more)
tests/: test_bouts_to_bins.py  test_compare_gt.py  test_generate_behavior_tables.py  test_heuristic_classify.py  test_id_matching.py  test_project_utils.py
vm/: JABS-postprocess-uv.def  JABS-postprocess.def  jabs-postprocess.def  requirements.txt  runscript.sh
(+19 files in other folders)
