[project]
name = "jabs-postprocess"
version = "0.1.0"
description = "A python library for JABS postprocessing utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=23.9.1",
    "h5py>=3.13.0",
    "imageio>=2.31.3",
    "imageio-ffmpeg>=0.4.9",
    "matplotlib>=3.8.0",
    "mizani>=0.9.3",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.8.0.76",
    "openpyxl>=3.1.2",
    "pandas>=2.2.3",
    "pydocstyle>=6.3.0",
    "plotnine>=0.14.5",
    "pyqt5>=5.15.2",
    "pyyaml>=6.0.2",
    "Pillow>=10.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jabs_utils*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]
